feat: sync-api 서비스 코드 작성및 예외상황 시 발생우려 코드 수정